--- a/src/app/channels/channels.component.html
+++ b/src/app/channels/channels.component.html
@@ -2,9 +2,19 @@
 
 
 <div class="container">
+
+
   <div class="row">
+    <span class="total">{{getTotal()}} каналов</span>
+
+  </div>
+
+  <div class="row align-items-center">
+
+
+
 <div class="col-md-3 col-lg-2 col-6 " *ngFor="let channel of this.serverData.channelData"  >
-  <div class="preview-chanel" [ngStyle]="{'background-image': 'url(' + getBgImage(channel) + ')'}" >
+  <div class="preview-chanel  preview-hover" [ngStyle]="{'background-image': 'url(' + getBgImage(channel) + ')'}" >
 
 
 
@@ -17,7 +27,7 @@
 
 <div class="row text-center">
   <picture>
-    <img alt="Показать еще" title="Показать еще" src="/src/assets/image/refresh.png">
+    <img alt="Показать еще" title="Показать еще" src="assets/image/refresh.png">
   </picture>
 <button (click)="getMore()">Показать еще</button>
 </div>
