--- a/src/app/channels/channels.component.html
+++ b/src/app/channels/channels.component.html
@@ -9,7 +9,7 @@
 
   </div>
 
-  <div class="row align-items-center">
+  <div class="row">
 
 
 
@@ -27,7 +27,7 @@
 
 <div class="row text-center">
   <picture>
-    <img alt="Показать еще" title="Показать еще" src="assets/image/refresh.png">
+    <img alt="Показать еще" style="width: 34px; height: 27px; transform: rotate(-44.91deg);" title="Показать еще" src="assets/image/refresh.png">
   </picture>
 <button (click)="getMore()">Показать еще</button>
 </div>
