--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -16,3 +16,7 @@ justify-content: flex-end;
   color:#BA9D5A;
   border-bottom: solid #BA9D5A 2px;
 }
+.padding-header {
+  padding-top: 45px;
+  padding-bottom: 22px;
+}
